                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.1.4
  *) [TS-1222] single tcp connection will limit the cluster throughput.

  *) [TS-475] Accelerated single range requests.
     Based on initial work by ericb, with help from bwyatt.

  *) [TS-1236] HTTP Accept filters do not work on Illumos.

  *) [TS-1075] Workarounds for linux auto-port issues in transparent
   deployments.

  *) [TS-672] cleanup Win32 references.

  *) [TS-1181] Make the overridable configs work with "byte" configs.

  *) [TS-1252] Fixed include issues when using mgmtapi.h.

  *) [TS-1248] update HTTP status codes and strings.

  *) [TS-1245] proxy.config.http.connect_ports may be '*'.

  *) [TS-1239] TSHttpTxnServerAddrSet implementation.

  *) [TS-1237] custom log field/filtering improvements.

  *) [TS-1090] SO_MARK and IP_TOS support for Linux.

  *) [TS-1238] RAM cache hit rate unexpectedly low with CLFUS.

  *) [TS-1242] Make it build with some more recent automake versions.

  *) [TS-1241] Memory leaks when using TSHttpSchedule().
   Author: Aidan McGurn.

  *) [TS-1163] Support for raw disks larger than 2TB on Linux.

  *) [TS-1230] added a paramter to the configure script to allow overriding
   the calculated ARG_MAX value.

  *) [TS-1208] enable check_memory() in traffic_cop for Linux.

  *) [TS-1217] cop cleanup, remove unused variables & defines.

  *) [TS-1209] Allow for background fill even when a transform plugin is
   the producer. Author: Robert Logue.

  *) [TS-1229] clean up RecordsCofing.cc, remove unused entries.

  *) [TS-1142] record ram hit in stats.

  *) [TS-1213] update will crash at HttpTransact::process_quick_http_filter.

  *) [TS-1186] Fixed Perl stats API to work with 64-bit stat values

  *) [TS-1227] header_filter "set" operator doesn't work if the header
   doesn't already exist.

  *) [TS-1210] remove 3.0.x deprecated APIs

  *) [TS-1225] Remove 32 bit doc_len instances.
